--- a/slide1.html
+++ b/slide1.html
@@ -4,7 +4,7 @@
     <title>R básico para Químicos  </title>
     <meta charset="utf-8" />
     <meta name="author" content="     R-Ladies Vitória" />
-    <script src="libs/header-attrs-2.25/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.27/header-attrs.js"></script>
     <link rel="stylesheet" href="css/kunoichi.css" type="text/css" />
     <link rel="stylesheet" href="css/ninjutsu.css" type="text/css" />
     <link rel="stylesheet" href="css/rladies-fonts.css" type="text/css" />
@@ -50,6 +50,8 @@ class: middle
 
 - R-Ladies
 
+- Conceitos Básicos
+
 - Introdução ao R
 
 - R básico
@@ -65,7 +67,7 @@ class: middle
 class:  center
 
 &lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="img/hexlogorladies.jpeg" alt="&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;" width="18%" /&gt;
+&lt;img src="img/hexlogorladies.jpeg" alt="&amp;lt;center&amp;gt;&amp;lt;b&amp;gt; &amp;lt;/center&amp;gt;&amp;lt;/b&amp;gt;" width="18%" /&gt;
 &lt;p class="caption"&gt;&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;&lt;/p&gt;
 &lt;/div&gt;
 
@@ -85,7 +87,7 @@ class:  center
 class:  center
 
 &lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="img/rladies_vix.png" alt="&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;" width="40%" /&gt;
+&lt;img src="img/rladies_vix.png" alt="&amp;lt;center&amp;gt;&amp;lt;b&amp;gt; &amp;lt;/center&amp;gt;&amp;lt;/b&amp;gt;" width="40%" /&gt;
 &lt;p class="caption"&gt;&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;&lt;/p&gt;
 &lt;/div&gt;
 
@@ -103,6 +105,77 @@ O Capítulo da cidade de Vitória foi criado em 29 de setembro de 2019. Em 2020 
   - Instagram: [@RLadiesVix](http://instagram.com/rladiesvix)
   - Github: [https://github.com/rladies/meetup-presentations_vitoria](https://github.com/rladies/meetup-presentations_vitoria)
 
+&lt;!-- Back-end e front-end --&gt;
+---
+
+class: middle 
+
+### Conceitos Básicos
+
+# Back-end VS Front-end
+
+**Front-end** é a parte que os usuários veem e interagem, 
+**back-end** é a parte que faz o programa funcionar
+
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="img/back_front.png" alt="&amp;lt;center&amp;gt;&amp;lt;b&amp;gt; &amp;lt;/center&amp;gt;&amp;lt;/b&amp;gt;" width="100%" /&gt;
+&lt;p class="caption"&gt;&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;&lt;/p&gt;
+&lt;/div&gt;
+
+&lt;!-- Terminal --&gt;
+---
+
+class: middle 
+
+### Conceitos Básicos
+
+# Terminal, Console ou Prompt de Comando
+
+Interface de linha de comando que permite a comunicação direta com o sistema operacional do computador.
+
+- Para acessar aperte **Windows** + **R**
+
+&lt;!-- Linguagens --&gt;
+---
+
+class: middle 
+
+### Conceitos Básicos
+
+# Linguagem de Programação
+
+O computador "fala" **binário** (0 e 1, V e F, passa corrente e não passa corrente)  
+
+Humanos falam Português, Inglês, etc    
+
+Cada linguagem de programação tem suas próprias particularidades e é criada para resolver problemas específicos.
+
+
+
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="img/linguagens.png" alt="&amp;lt;center&amp;gt;&amp;lt;b&amp;gt; &amp;lt;/center&amp;gt;&amp;lt;/b&amp;gt;" width="50%" /&gt;
+&lt;p class="caption"&gt;&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;&lt;/p&gt;
+&lt;/div&gt;
+
+&lt;!-- Tipagem --&gt;
+---
+
+class: middle 
+
+### Conceitos Básicos
+
+# Tipos de dados
+
+- **Numeric**: números que podem ser tanto inteiros quanto decimais. (5; 3.2; 6.8)  
+
+- **Integer**: Especificamente números inteiros.(1, 2, 7)  
+
+- **Character**: Representa textos ou cadeias de caracteres. ("Rladies", "2", "UFES")  
+
+- **Logical**: Representa valores booleanos, TRUE ou FALSE.  
+
+
+
 
 &lt;!-- R --&gt;
 ---
@@ -110,7 +183,7 @@ class: middle
 
 
 &lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="img/R_logo.svg.png" alt="&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;" width="25%" /&gt;
+&lt;img src="img/R_logo.svg.png" alt="&amp;lt;center&amp;gt;&amp;lt;b&amp;gt; &amp;lt;/center&amp;gt;&amp;lt;/b&amp;gt;" width="25%" /&gt;
 &lt;p class="caption"&gt;&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;&lt;/p&gt;
 &lt;/div&gt;
 
@@ -132,7 +205,7 @@ class: middle
 class: middle
 
 &lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="img/rstudio.png" alt="&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;" width="45%" /&gt;
+&lt;img src="img/rstudio.png" alt="&amp;lt;center&amp;gt;&amp;lt;b&amp;gt; &amp;lt;/center&amp;gt;&amp;lt;/b&amp;gt;" width="45%" /&gt;
 &lt;p class="caption"&gt;&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;&lt;/p&gt;
 &lt;/div&gt;
 
@@ -153,7 +226,7 @@ class: middle
 # RStudio
 
 &lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="figures/rstudio1.png" alt="&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;" width="100%" /&gt;
+&lt;img src="figures/rstudio1.png" alt="&amp;lt;center&amp;gt;&amp;lt;b&amp;gt; &amp;lt;/center&amp;gt;&amp;lt;/b&amp;gt;" width="100%" /&gt;
 &lt;p class="caption"&gt;&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;&lt;/p&gt;
 &lt;/div&gt;
 ---
@@ -227,7 +300,7 @@ class: middle
 # Shall we?
 
 &lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="img/allisonhorst/community1.jpg" alt="&lt;center&gt;&lt;b&gt;Ilustração por Allison Horst - Twitter: &lt;a href='https://twitter.com/allison_horst/'&gt; @allison_horst&lt;/a&gt; &lt;/b&gt;&lt;/center&gt;" width="40%" /&gt;
+&lt;img src="img/allisonhorst/community1.jpg" alt="&amp;lt;center&amp;gt;&amp;lt;b&amp;gt;Ilustração por Allison Horst - Twitter: &amp;lt;a href='https://twitter.com/allison_horst/'&amp;gt; @allison_horst&amp;lt;/a&amp;gt; &amp;lt;/b&amp;gt;&amp;lt;/center&amp;gt;" width="40%" /&gt;
 &lt;p class="caption"&gt;&lt;center&gt;&lt;b&gt;Ilustração por Allison Horst - Twitter: &lt;a href='https://twitter.com/allison_horst/'&gt; @allison_horst&lt;/a&gt; &lt;/b&gt;&lt;/center&gt;&lt;/p&gt;
 &lt;/div&gt;
 
@@ -239,7 +312,7 @@ class: middle
 &lt;!-- 1) Operadores --&gt;
 
 
-```r
+``` r
 #adição
 10+15
   #&gt; [1] 25
@@ -270,7 +343,7 @@ class: middle
 Para atribuir a um objeto, o sinal de atribuição é = ou &lt;-. 
 Exemplos:
 
-```r
+``` r
 x &lt;- 10/2
 x
   #&gt; [1] 5
@@ -305,7 +378,7 @@ class: middle
 
 Vamos atribuir a x a string banana. 
 
-```r
+``` r
 x &lt;- banana 
   #&gt; Error in eval(expr, envir, enclos): objeto 'banana' não encontrado
 x &lt;- "banana"
@@ -314,7 +387,7 @@ x
 ```
 O primeiro caso (x&lt;-banana) não deu certo, pois ele entendeu que estamos atribuindo a x outro objeto banana, que não foi declarado. Para atribuir o string banana à x, precisamos colocar entre aspas ou aspas simples. Uma string sem aspas é entendido como um objeto, veja abaixo:
 
-```r
+``` r
 banana &lt;- 30
 x &lt;- banana
 x
@@ -328,7 +401,7 @@ class: middle
 Função class().
 
 
-```r
+``` r
 y &lt;- "ola"
 class(y)
   #&gt; [1] "character"
@@ -341,7 +414,7 @@ class(x)
 Apagar objetos
 
 
-```r
+``` r
 x &lt;- 20
 x
   #&gt; [1] 20
@@ -352,7 +425,7 @@ x
 
 E se eu quiser limpar o console - apaga todos os objetos atribuidos até aqui:
 
-```r
+``` r
 rm(list=ls())
 ```
 
@@ -375,7 +448,7 @@ class: middle
 ### Vetor
  &lt;!-- Como atribuir varios valores a um objeto?  Para entrar com vários números (ou nomes, ou qualquer outro grupo de coisas), precisamos usar uma função para dizer ao programa que os valores serão combinados em um único vetor. --&gt;
 
-```r
+``` r
 x &lt;- c(2,3,4)
 x
   #&gt; [1] 2 3 4
@@ -394,7 +467,7 @@ bicho
 ```
 E se quisermos visualizar o conteúdo da posição 2 no vetor bicho?
 
-```r
+``` r
 bicho[2]
   #&gt; [1] "pato"
 ```
@@ -406,7 +479,7 @@ class: middle
 Operações vetoriais
 
 
-```r
+``` r
 k &lt;- x*2
 y &lt;- c(x,k)
 y
@@ -418,7 +491,7 @@ Como calcularia o IMC de 6 pessoas?
 --
 
 
-```r
+``` r
 peso &lt;- c(62, 70, 52, 98, 90, 70)
 altura &lt;- c(1.70, 1.82, 1.75, 1.94, 1.84, 1.61)
 imc &lt;- peso/(altura^2)
@@ -428,7 +501,7 @@ imc
 
 Função length(). 
 
-```r
+``` r
 length(imc)
   #&gt; [1] 6
 ```
@@ -439,7 +512,7 @@ class: middle
 ### Matrizes
 
 
-```r
+``` r
 x &lt;- matrix(seq(1:16), nrow=4,ncol=4); x
   #&gt;      [,1] [,2] [,3] [,4]
   #&gt; [1,]    1    5    9   13
@@ -463,7 +536,7 @@ x
 ```
 dimensao da matriz x?
 
-```r
+``` r
 dim(x)
   #&gt; [1] 4 4
 ```
@@ -472,7 +545,7 @@ class: middle
 
 Concatenar linhas em uma matriz
 
-```r
+``` r
 vet &lt;- c(2,20,12,34)
 x2 &lt;- rbind(x,vet); x2
   #&gt;     [,1] [,2] [,3] [,4]
@@ -485,7 +558,7 @@ x2 &lt;- rbind(x,vet); x2
 
 Concatenar colunas em uma matriz
 
-```r
+``` r
 v2 &lt;- c(25,10,15,4) 
 x3 &lt;- cbind(x,v2); x3
   #&gt;                  v2
@@ -502,17 +575,17 @@ class: middle
 
 Operações matriciais
 
-```r
+``` r
 xa &lt;- x2[1:2,1:2]
 xb &lt;- matrix(rnorm(4),2,2)
 xa*xb #multiplicacao ponto a ponto
   #&gt;       [,1]       [,2]
-  #&gt;  -3.035533 -20.669362
-  #&gt;  -2.464070   5.210473
+  #&gt;  -9.612089 -35.755343
+  #&gt;   1.542286  -8.077185
 xa%*%xb #multiplicacao matricial
-  #&gt;        [,1]      [,2]
-  #&gt;  -21.516055 -4.887264
-  #&gt;   -7.859214  2.454558
+  #&gt;      [,1]      [,2]
+  #&gt;  1.955053 -51.18093
+  #&gt;  3.148074 -12.84456
 solve(xa) #inversa de xa
   #&gt;                            
   #&gt; [1,]  0.12500000 -0.3125000
@@ -530,7 +603,7 @@ Essa é a grande diferença entre data.frame’s e matrizes (matriz é só numer
 
 Posso criar um data frame no R com os vetores, por exemplo:
 
-```r
+``` r
 ID &lt;- seq(1:6)
 pes &lt;- c(62, 70, 52, 98, 90, 70)
 alt &lt;- c(1.70, 1.82, 1.75, 1.94, 1.84, 1.61)
@@ -551,14 +624,14 @@ class: middle
 
 Selecionar a variavel de interesse:
 
-```r
+``` r
 dados$altura
   #&gt; [1] 1.70 1.82 1.75 1.94 1.84 1.61
 ```
 
 Putz, esqueci de colocar a varivel de grupo no data frame. Tenho que criar tudo de novo? Não:
 
-```r
+``` r
 gr &lt;- c(rep(1,3),rep(2,3))
 dados$grupo &lt;- gr
 
@@ -589,7 +662,7 @@ Funcoes uteis para data.frame:
 
 
 
-```r
+``` r
 names(dados)
   #&gt; [1] "ID"     "peso"   "altura" "imc"    "grupo"
 str(dados)
@@ -605,7 +678,7 @@ str(dados)
 class: middle
 
 
-```r
+``` r
 mean(dados$imc)
   #&gt; [1] 23.1988
 sd(dados$imc)
@@ -616,7 +689,7 @@ summary(dados$imc)
 ```
 
 
-```r
+``` r
 table(dados$grupo)
   #&gt; 
   #&gt; 1 2 
@@ -630,7 +703,7 @@ class: middle
 &lt;!-- Fatores podem ser vistos como vetores de inteiros que possuem rótulos (labels). Eles são úteis para representar uma variável categórica (nominal e ordinal). --&gt;
 
 
-```r
+``` r
 sexo &lt;- c("M", "H", "H", "H", "M", "M", "H")
 sex &lt;- as.factor(sexo)
 sex
@@ -645,22 +718,22 @@ class: middle
 
 ### Arrays
 
-```r
+``` r
 dim3 &lt;- array(rnorm(18),dim = c(3,3,2))
 dim3
   #&gt; , , 1
   #&gt; 
-  #&gt;            [,1]        [,2]       [,3]
-  #&gt; [1,]  0.4920982 -0.03603598  0.7518811
-  #&gt; [2,]  0.3254065  1.28093481 -1.1085538
-  #&gt; [3,] -1.2909544  0.23053774 -0.3406590
+  #&gt;            [,1]       [,2]       [,3]
+  #&gt; [1,] -0.4762721 -0.2246103 -0.3412759
+  #&gt; [2,]  0.7198922  0.3896611 -0.1786520
+  #&gt; [3,]  1.3088916  0.6241658 -1.5822742
   #&gt; 
   #&gt; , , 2
   #&gt; 
-  #&gt;           [,1]       [,2]       [,3]
-  #&gt; [1,] -1.346634 -0.4663069  0.6452644
-  #&gt; [2,] -1.324795 -0.7696207 -0.3606524
-  #&gt; [3,] -1.461145  2.3887574 -0.5251726
+  #&gt;             [,1]      [,2]      [,3]
+  #&gt; [1,]  0.11684243 0.2208075 0.8725294
+  #&gt; [2,] -0.08990134 0.9372049 1.0564020
+  #&gt; [3,]  0.32403566 1.1940439 0.6527839
 ```
 
 ---
@@ -670,7 +743,7 @@ class: middle
 
 .scroll-box-14[
 
-```r
+``` r
 ls &lt;- list(ls1 = 'a',ls2 = c(1,2,3),ls3 = array(rnorm(6),dim = c(3,1,2,1))); ls
   #&gt; $ls1
   #&gt; [1] "a"
@@ -682,16 +755,16 @@ ls &lt;- list(ls1 = 'a',ls2 = c(1,2,3),ls3 = array(rnorm(6),dim = c(3,1,2,1))); 
   #&gt; , , 1, 1
   #&gt; 
   #&gt;            [,1]
-  #&gt; [1,]  1.1425775
-  #&gt; [2,] -0.9643774
-  #&gt; [3,]  1.3008762
+  #&gt; [1,] -0.5523701
+  #&gt; [2,] -2.0713762
+  #&gt; [3,]  0.3453661
   #&gt; 
   #&gt; , , 2, 1
   #&gt; 
-  #&gt;              [,1]
-  #&gt; [1,] -0.460198449
-  #&gt; [2,]  0.761367964
-  #&gt; [3,] -0.003965162
+  #&gt;            [,1]
+  #&gt; [1,]  1.1489049
+  #&gt; [2,] -0.4832256
+  #&gt; [3,]  1.5097059
 ```
 ]
 ---
@@ -701,7 +774,7 @@ class: middle
 Igual a: ==
 
 
-```r
+``` r
 10==11
   #&gt; [1] FALSE
 ```
@@ -709,7 +782,7 @@ Igual a: ==
 Diferente de: !=
 
 
-```r
+``` r
 10!=11
   #&gt; [1] TRUE
 ```
@@ -730,7 +803,7 @@ class: middle
 * E: &amp; - será verdadeiro se os dois forem TRUE
 
 
-```r
+``` r
 x &lt;- 15
 x &gt; 10 &amp; x &lt; 30
   #&gt; [1] TRUE
@@ -742,7 +815,7 @@ x &lt; 10 &amp; x &lt; 30
 * OU: | - será verdadeiro se um dos dois for TRUE
 
 
-```r
+``` r
 x &gt; 10 | x &gt; 30
   #&gt; [1] TRUE
 ```
@@ -750,7 +823,7 @@ x &gt; 10 | x &gt; 30
 * Negação: ! 
 
 
-```r
+``` r
 x &lt;- 15
 !x&lt;30
   #&gt; [1] FALSE
@@ -762,7 +835,7 @@ class: middle
 ### If e else
 
 
-```r
+``` r
 a &lt;- 224
 b &lt;- 225
 if (a==b) { v=10
@@ -772,7 +845,7 @@ v
 ```
 
 
-```r
+``` r
 a &lt;- 224
 b &lt;- 225
 if (a==b) { v=10
@@ -788,13 +861,13 @@ class: middle
 
 ### For
 
-```r
+``` r
 m &lt;- c(1,20,50,60,100)
 ```
 Quero criar um novo vetor, p digamos,  que seja formado por cada elemento 
 de m dividido por sua posição. 
 
-```r
+``` r
 p &lt;- rep(0,length(m))
 for (i in 1: length(m)){
   p[i] &lt;- m[i]/i
@@ -809,7 +882,7 @@ class: middle
 
 ### Funções 
 
-```r
+``` r
 f.soma &lt;- function(x,y) {
   out &lt;- x+y
   return(out)
@@ -825,7 +898,7 @@ f.soma &lt;- function(x,y) {
 
 Vamos agora chamar a função:
 
-```r
+``` r
 f.soma(x=10,y=20)
   #&gt; [1] 30
 
@@ -852,7 +925,7 @@ class: middle
 
   * Help/documentação do R 
 
-```r
+``` r
 help(mean) #ou
 ?mean
 ```
@@ -870,7 +943,7 @@ help(mean) #ou
 ## Adicionando GIFS
 
 
-```r
+``` r
 knitr::include_graphics("https://media2.giphy.com/media/S857VNxM6HwlZuYXrU/giphy.gif")
 ```
 
@@ -907,7 +980,7 @@ Só é necessário instalar o pacote uma vez, mas precisa carregá-lo toda vez q
 class: middle
 
 &lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="figures/libraries-logo.png" alt="&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;" width="70%" /&gt;
+&lt;img src="figures/libraries-logo.png" alt="&amp;lt;center&amp;gt;&amp;lt;b&amp;gt; &amp;lt;/center&amp;gt;&amp;lt;/b&amp;gt;" width="70%" /&gt;
 &lt;p class="caption"&gt;&lt;center&gt;&lt;b&gt; &lt;/center&gt;&lt;/b&gt;&lt;/p&gt;
 &lt;/div&gt;
 Imagem de [Business Science](https://www.business-science.io/code-tools/2023/09/30/top-9-r-packages.html)
